# Szakdolgozatv2

./: .gitignore  Dip_kiirasSablon_v3_TMIT_magyar.docx  README.md  Szakdoga lépések.docx  chunk_corpus.json  diagrams.ipynb  evaluation.py  evaluation_module.py  hard_questions.json  helper_functions.py  proba.py  pyproject.toml  question_dataset.json  rag_comparison_hard_results.json  rag_comparison_results.json  rag_evaluation_dashboard.html  rag_evaluation_module.py  ragas_evaluation_results.csv.xlsx  ragas_evaluation_results_complex.csv  ragas_evaluation_results_complex_with_config.csv  ragas_evaluation_results_simple_with_config.csv  ragas_evaluation_results_ultimate.csv  ragas_evaluation_results_ultimate_complex.csv  szakdoga.py  test_results.json  tts.py  tts_evaluation_module.py  tts_module.py  ui_components.py  ui_components_module.py  utils.py  utils_module.py  whisper_gui.py  xtts.py  ~$akdoga lépések.docx  ~WRL0005.tmp
evaluation_results/: ragas_evaluation_results.csv.xlsx  stt_eval.xlsx  tts_eval.xlsx
szakdolgozat/: pyvenv.cfg
szakdolgozat/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  get_gprof  get_objgraph  jsondiff  jsonpatch  jsonpointer  numba  undill
transcribes/: leirat_20250927_200659.txt
