[project]
name = "szakdolgozat-fuggosegek"
version = "0.1.0"
description = "Szakdoga függőségek"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "mlflow (>=3.4.0,<4.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "openai-whisper @ git+https://github.com/openai/whisper.git",
    "gradio (>=5.47.2,<6.0.0)",
    "datetime (>=5.5,<6.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langchain-huggingface (>=0.3.1,<0.4.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "pyttsx3 (>=2.99,<3.0)",
    "ragas (>=0.3.6,<0.4.0)",
    "langchain-ollama (>=0.3.10,<0.4.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pystoi (>=0.4.1,<0.5.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pesq (>=0.0.4,<0.0.5)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "inflect (>=7.5.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
